--- a/Contact Me.html
+++ b/Contact Me.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Contact Me</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 <header>
   <nav class="primary-nav2">
